update html and css

--- a/style.css
+++ b/style.css
@@ -61,3 +61,12 @@ img{
     font-size: .8rem;
     line-height: 1.4rem;
 }
+.work-part{
+    display: grid;
+}
+#fav-band{
+
+}
+#ktcn{
+    margin-top: 0%;
+}
